--- a/aboutus.html
+++ b/aboutus.html
@@ -275,23 +275,20 @@
             </div>
         </section>
 
-        <section class="mission">
+        <!--<section class="mission">
             <h2>Our Mission</h2>
             <p>At Bit by Bit Coding, we believe that coding is more than just a technical skill—it’s a tool for empowerment. Our mission is to provide free, high-quality programming education to students worldwide, breaking down barriers of geography, gender, and socioeconomic status.</p>
             <ul>
                 <li>Expanding access to coding education through free courses, workshops, and mentorship.</li>
                 <li>Creating inclusive learning opportunities, particularly for young girls in STEM.</li>
-                <!--<li>Offering flexible learning models, including recorded sessions and self-paced programs, to ensure that every student has the opportunity to succeed.</li>-->
+                <li>Offering flexible learning models, including recorded sessions and self-paced programs, to ensure that every student has the opportunity to succeed.</li>
                 <li>Supporting the next generation of leaders by providing guidance in both technical and leadership skills.</li>
             </ul>
-        </section>
+        </section>-->
 
         <section class="story">
-            <h2>Our Story</h2>
-            <p>Bit by Bit Coding was founded with a simple but powerful goal: to make programming education accessible to all. Our journey began when our founder, an NCWIT Impact Award-winning advocate for computer science, saw firsthand the barriers that prevent students—especially young girls and international learners—from accessing quality coding education.</p>
-            <p>Starting as a personal mission to bridge this gap, Bit by Bit Coding has grown into a global initiative. From authoring A Girl’s Blueprint to Building Websites to launching a YouTube channel and middle school clubs, our founder has worked tirelessly to empower the next generation of programmers.</p>
-            <!--<p>Through our efforts, we’ve reached over 4,500 individuals, offering free coding lessons and hands-on experiences.</p>-->
-            <p>With every lesson taught and every student empowered, we are proving that anyone, anywhere, can learn to code— bit by bit.</p>
+            <h2>Our Mission</h2>
+            <p>Bit by Bit Coding was founded with a simple but powerful goal: to make programming education accessible to all. Our journey began when our founder, an NCWIT National Impact Award-winning advocate for computer science, experienced firsthand the barriers that prevent students from accessing quality coding education. Our vision is that our students will use this newfound knowledge to solve problems in their own communities, spreading Bit by Bit Coding's mission beyond the classroom.</p>
         </section>
 
         <section class="contact">
