--- a/ambassador-hub.html
+++ b/ambassador-hub.html
@@ -36,10 +36,12 @@
         <h1>Become an Ambassador</h1>
 
         <h3>Lead with Purpose. Build with Vision.</h3>
-        <p>As a Bit by Bit Ambassador, you’ll launch and lead a Bit by Bit chapter at your school or in your community, guiding peers through our yearlong coding curriculum and cultivating a space where innovation and inclusion go hand in hand.</p>
-        <p>We’ll equip you with the curriculum, tools, and support you need. All you need is the courage to lead, the curiosity to explore, and the drive to serve. Your chapter will have the opportunity to compete as a team in our global hackathons, turning ideas into real-world impact. At the end of each semester, you’ll submit a brief reflection: not just to check-in, but to assess growth, impact, and what's next.</p>
-        <p>This isn’t about adding a line to your résumé. It’s about becoming the kind of leader who sees a need, builds a solution, and lifts others along the way. Because the future of tech belongs to those who build and lead it with purpose.</p>
+        <p>As a Bit by Bit Ambassador, you’ll launch and lead a Bit by Bit chapter at your school or in your community, guiding peers through our yearlong coding curriculum.</p>
+
+        <p>We’ll equip you with the curriculum, tools, and support you need. Your chapter will have the opportunity to compete as a team in our global hackathons, turning ideas into real-world impact. Every few months, you’ll submit a brief check-in.</p>
+
         <p>Our curriculum is designed to introduce coding to learners of all ages: from curious upper elementary school students to motivated teens and adults looking to dive into tech.</p>
+        
         <h3>You’re not just joining a program, you’re starting a movement.</h3>
 
             <button class="button" onclick='window.location.href="https://forms.gle/qQmwTzBCTmwYtxcS6"'>Sign Up to be an Ambassador!</button>
