--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
 
         <div class="container">
             <h1>Welcome to Bit by Bit</h1>
-            <p>Igniting interest in coding worldwide, rooted in North Carolina.</p>
+            <p>Empowering students by offering free computer science education; enabling them to solve problems in their communities.</p>
             <a href="student-hub.html" class="button">Student Hub</a>
             <a href="volunteer-hub.html" class="button">Volunteer Hub</a>
             <a href="ambassador-hub.html" class="button">Ambassador Hub</a>
@@ -49,11 +49,11 @@
                     <div class="stat-label">Countries</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-number">8,366</div>
+                    <div class="stat-number">9,170</div>
                     <div class="stat-label">Projects Completed</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-number">1,663</div>
+                    <div class="stat-number">1,776</div>
                     <div class="stat-label">Students</div>
                 </div>
                 <div class="stat-box">
@@ -118,7 +118,7 @@
         };
 
         const printBot = (message) => {
-            output.innerHTML += `<br>BitBot: ${message}`;
+            output.innerHTML += `<br>Chatbot: ${message}`;
             scrollToBottom();
         };
 
