--- a/student-hub.html
+++ b/student-hub.html
@@ -37,9 +37,7 @@
 
         <h3>Learn with Purpose. Build with Confidence.</h3>
 
-        <p>At Bit by Bit, you're not just learning to code: you're discovering how to think critically, solve real-world problems, and create technology that makes a difference.</p> 
-
-        <p>Our program is designed to introduce coding to learners of all ages: from curious upper elementary school students to motivated teens and adults looking to dive into tech. We offer six dynamic courses that grow with you. Whether you're just getting started or ready to build your first app, there's a class for you.</p>
+        <p>Our program is designed to introduce coding to learners of all ages: from curious upper elementary school students to motivated teens and adults looking to dive into tech. We offer six dynamic courses that grow with you.</p>
 
         <div class="student-hub">
             <div class="student-hub-item">
