--- a/aboutus.html
+++ b/aboutus.html
@@ -127,11 +127,10 @@
                 </div>
                 <div class="profile coaches-item-2">
                     
-                    <img src="images/tvisha_doshi_headshot.png" alt="Tvisha Doshi">
+                    <img src="images/logo-color.png" alt="Coming Soon!">
                     <div class="profile-details">
-                        <h4>Tvisha Doshi</h4>
-                        <h5>University of Texas at Dallas</h5>
-                        <p>Hello! I’m Tvisha Doshi, a Computer Engineering major at the University of Texas at Dallas. I discovered my passion for coding and tutoring back in high school, and I’ve been expanding my knowledge in languages like HTML, C++, and Javascript ever since. I love sharing proud moments with students as they code new projects. In my free time, I usually dance, travel, or discover new restaurants.</p>
+                        <h4>Coming Soon!</h4>
+                        <p>Coming Soon!</p>
                     </div>
                 </div>
                 <div class="profile coaches-item-3">
@@ -139,7 +138,7 @@
                     <img src="images/nikhitha_reddi_headshot.JPG" alt="Nikhitha Reddi">
                     <div class="profile-details">
                         <h4>Nikhitha Reddi</h4>
-                        <h5>Northeastern Illinois University</h5>
+                        <h5>College Student</h5>
                         <p>Nikhitha Reddi is an enthusiastic educator and aspiring developer with a strong interest in technology and community impact. With experience in front-end and back-end development, she is passionate about making tech education accessible and engaging for all students, especially those new to programming.</p>
                     </div>
                 </div>
@@ -159,7 +158,7 @@
                     <img src="images/qihang_shen_headshot.jpg" alt="Qihang Shen">
                     <div class="profile-details">
                         <h4>Qihang Shen</h4>
-                        <h5>DeAnza College</h5>
+                        <h5>College Student</h5>
                         <p>Hi all, my name is Qihang Shen. Currently is a student majoring in data science. I learned C++ and Java. I'd be very glad to expand my knowledge and meet more people.</p>
                     </div>
                 </div>
@@ -183,7 +182,7 @@
                     <img src="images/annaliese_scott_headshot.png" alt="Annaliese Scott">
                     <div class="profile-details">
                         <h4>Annaliese Scott</h4>
-                        <h5>Auburn Riverside High School</h5>
+                        <h5>High School Student</h5>
                         <p>Hi everyone! My name is Annaliese Scott and I live in Seattle Washington. I’m a junior in high school and have been coding since 7th grade. I’m proficient in multiple different coding languages such as Javascript, Java, and Python. My goal is to instill the love I have for coding in young kids. I also aim to allow kids to have a fun outlet to express their creativity and further their technological skills.</p>
                     </div>
                 </div>
@@ -202,7 +201,7 @@
                     <img src="images/averie_truong_headshot.png" alt="Averie Truong">
                     <div class="profile-details">
                         <h4>Averie Truong</h4>
-                        <h5>Fountain Valley High School</h5>
+                        <h5>High School Student</h5>
                         <p>Averie is a high school student passionate about coding, cybersecurity, and emerging technologies. Through programs like Bit by Bit Coding, she looks to expand her skills in new areas of tech, build real-world projects, and grow as a developer and problem-solver. She is especially excited to support others, contribute to meaningful projects, and be part of a diverse tech community.</p>
                     </div>
                 </div>
