--- a/aboutus.html
+++ b/aboutus.html
@@ -279,11 +279,22 @@
                     </div>
                 </div>
                 <div class="profile judges-item-2">
-                    <img src="images/logo-color.png" alt="Sridhar Reddy Anumandla ">
+                    <img src="images/sridhar_reddy_anumandla_headshot.jpg" alt="Sridhar Reddy Anumandla ">
                     <div class="profile-details">
                         <h4>Sridhar Reddy Anumandla </h4>
                         <h5>Meta</h5>
-                        <p>Bio Coming Soon!</p>
+                        <p>
+                            My name is Sridhar Reddy Anumandla, and I am an Engineering Leader at Meta. Over the past 3+ years, I have led the development and growth of Velox, an open-source unified execution engine that started as a 0→1 initiative under my leadership and is now widely adopted across hyperscalers and big tech.
+                        </p>
+                        <p>
+                            More recently, I have been part of Meta’s SuperIntelligence efforts, where I lead teams driving innovation in AI infrastructure.
+                        </p>
+                        <p>
+                            Prior to Meta, I held leadership roles at startups, where I developed analytics platforms powered by AI/ML, built industry-first data lake, and pioneered containerization to accelerate developer productivity.
+                        </p>
+                        <p>
+                            With more than 14 years of experience across startups and big tech, I bring a unique blend of strategic leadership and deep technical expertise in data and AI/ML infrastructure. I am passionate about building transformative technologies and have a proven track record of delivering industry-defining platforms.
+                        </p>
                     </div>
                 </div>
                 <div class="profile judges-item-3">
@@ -321,11 +332,11 @@
                         </div>
                 </div>
                 <div class="profile judges-item-2">
-                    <img src="images/logo-color.png" alt="Rambrij Chauhan ">
+                    <img src="images/Ram_headshot.jpeg" alt="Rambrij Chauhan ">
                     <div class="profile-details">
                         <h4>Rambrij Chauhan</h4>
                         <h5>Captial One</h5>
-                        <p>Bio Coming Soon!</p>
+                        <p>I am a technology leader with more than 18 years of experience, specializing in credit card systems and payment technologies. Over the past decade, my focus has been on building secure and scalable platforms that handle real-time card authorizations, improve fraud detection, and enable seamless digital authentication. I have led the design of EMVCo-certified 3D Secure (3DS) authentication systems and enterprise decisioning engines that evaluate creditworthiness in real time, ensuring compliance with global standards while protecting consumers. My background also includes work in AI and machine learning to strengthen fraud prevention and reduce false positives, combining technical innovation with practical business impact. As a Senior Member of IEEE, I actively contribute through mentoring, judging, and speaking engagements, sharing insights on secure payments, fintech innovation, and system resilience. I am passionate about advancing technologies that enhance trust in global payment ecosystems and inspire the next generation of engineers.</p>
                     </div>
                 </div>
                 <div class="profile judges-item-3">
