--- a/courses.html
+++ b/courses.html
@@ -54,7 +54,7 @@
             <button class="button" onclick="register()">Register</button>
         </div>-->
 
-        <!-- Summer 2025 -->
+        <!-- Summer 2025 
         <div class="container">
             <h1>Summer 2025 Courses (Current)</h1>
             <p>All prep courses run for 4 weeks, meeting via Discord on July 5th, July 12th, July 19th, and July 26th. These courses include an end-of-session hackathon on August 2nd from 12pm-3pm Eastern Time.</p>
@@ -88,12 +88,12 @@
         function registers() {
             window.location.href = "https://forms.gle/pUsraUxwmXv48jzv5";
         }
-        </script>
+        </script>-->
 
 
 <!-- Fall 2025 A -->
 <div class="container">
-    <h1>Fall 2025 Session A Courses (Upcoming)</h1>
+    <h1>Fall 2025 Session A Courses (Current)</h1>
     <p>All prep courses run for 4 weeks, meeting via Discord on September 20th, September 27th, October 4th, and October 11th. These courses include an end-of-session hackathon on October 18th from 12pm-3pm Eastern Time.</p>
     <h2>Web Development Hackathon Prep</h2>
     <ul>
