--- a/aboutus.html
+++ b/aboutus.html
@@ -243,11 +243,12 @@
                     </div>
                 </div>
                 <div class="profile judges-item-2">
-                    <img src="images/logo-color.png" alt="Abhijith Chikkalingaiah">
+                    <img src="images/abhijith_chikkalingaiah_headshot.jpg" alt="Abhijith Chikkalingaiah">
                     <div class="profile-details">
                         <h4>Abhijith Chikkalingaiah</h4>
                         <h5>Apple</h5>
-                        <p>Bio Coming Soon!</p>
+                        <p>Abhijith is an accomplished technology leader with extensive experience driving innovation, engineering excellence, and digital transformation at scale. He is a Senior Manager at Apple and holds an Executive MBA from Wharton, where he focused on innovation, entrepreneurship, and the intersection of AI and business strategy.</p>
+                        <p>With a career spanning over a decade, Abhijith has led high-impact teams, delivered breakthrough technologies, and developed a global perspective on how emerging technologies like AI are reshaping industries. He is passionate about mentoring the next generation of innovators and helping teams translate bold ideas into practical, scalable solutions.</p>
                     </div>
                 </div>
                 <div class="profile judges-item-3">
