--- a/aboutus.html
+++ b/aboutus.html
@@ -312,7 +312,7 @@
                     <img src="images/malar_kondappan_headshot.jpg" alt="Malar Kondappan">
                     <div class="profile-details">
                         <h4>Malar Kondappan</h4>
-                        <h5>General Motors</h5>
+                        <h5>General Motors Financial</h5>
                         <p>I'm Malar Kondappan, a System Architect and Technical Project Manager with over 20 years of experience in building secure, scalable technology solutions. My work has spanned the insurance, finance, and automotive industries, where I've led digital transformation initiatives and delivered enterprise-level systems that balance innovation with stability.</p>
 
                         <p>With a Master's in Information Systems and Security, I bring a strong foundation in both technology and strategy. Over the years, I’ve guided global, cross-functional teams, architected solutions across multi-cloud environments, and championed Agile and DevOps methodologies to improve performance, security, and delivery speed.</p>
