--- a/main.html
+++ b/main.html
@@ -55,6 +55,7 @@
                 <div class="stat-box">
                     <div class="stat-number">2,186</div>
                     <div class="stat-label">Students</div>
+                </div>
                 <div class="stat-box">
                     <div class="stat-number">29%</div>
                     <div class="stat-label">North Carolinians</div>
