--- a/ambassador-hub.html
+++ b/ambassador-hub.html
@@ -234,7 +234,7 @@
         <div class="profile judges-item-2">
             <img src="images/Ambassadors/nguyen_ductoan_headshot.jpg" alt="Nguyễn Đức Toàn">
            <div class="profile-details">
-               <h4>Nguyễn Đức Toàn</h4>
+               <h4>Nguyễn Đức Toàn - Vietnam</h4>
                <h5>DTGROUP</h5>
                <p>Microsoft innovative expert in 2015.</p>
            </div>
@@ -247,11 +247,51 @@
                 <p>I am senior student of Pakistan with strong background of Computer science Subject.</p>
             </div>
         </div>
-        <!--<div class="profile judges-item-4">
-            <img src="images/Ambassadors/danielle_conradie_headshot.jpg" alt="Danielle Conradie">
+        <div class="profile judges-item-4">
+            <img src="images/Ambassadors/rejoyce_amanie_headshot.jpg" alt="Rejoyce Amanie">
             <div class="profile-details">
-                <h4>Danielle Conradie - South Africa</h4>
-                <p>A qualified TEFL/TESOL educator with a 150-hour certification from TEFL Universal, I specializes in teaching English to non-native speakers using modern methodologies. I also hold a ECD-certified Early Childhood Development Certificate from Alison and has completed a Business English course through Cursa, equipping me with the skills to teach English in both academic and corporate settings</p>
+                <h4>Rejoyce Amanie - Ghana</h4>
+                <h5>ElaD club</h5>
+                <p>Hi, I am Rejoyce Amanie an education enthusiast. "It's important for children to start practicing the difficult yet important things in life early thus mastering them for rare opportunities". This is my reason and my goal.</p>
+            </div>
+        </div>
+    </div>
+    <!-- Row 6 -->
+    <div class="judges">
+        <div class="profile judges-item-1">
+            <img src="images/Ambassadors/james_akbulut_headshot.jpeg" alt="James Akbulut ">
+            <div class="profile-details">
+                <h4>James Akbulut - Cambodia</h4>
+                <h5>Homeschool Program</h5>
+                <p>ICT/Math Teacher, BSc electrical engineering, and 5 years of robotics engineering experience.</p>
+            </div>
+        </div>
+        <div class="profile judges-item-2">
+            <img src="images/logo-color.png" alt="Rajesh Kumar Kanji">
+           <div class="profile-details">
+               <h4>Rajesh Kumar Kanji - United States</h4>
+               <h5>Harrisburg University</h5>
+               <p>Experienced and results-driven Lead Technical Engineer with over 16 years of success in Technologies like Cloud moderation, AI/ML, Data Governance and Management. I’m passionate about shaping the next generation of data management powered by AI and machine learning, enabling businesses to move beyond traditional rule-based methods toward adaptive, intelligent solutions.</p>
+
+               <p>With a proven record of original contributions and impactful collaborations, I have helped shape frameworks and strategies that enable organizations to build intelligent, sustainable, and trustworthy data systems at scale.</p>
+
+               <p>I am a globally recognized leader in Data Governance, AI, and Data Quality, known for blending technical expertise with visionary thought leadership. As a sought-after speaker and mentor, I actively contribute to the global tech community by guiding emerging professionals, reviewing cutting-edge research, and delivering keynotes that inspire action across industries.</p>
+           </div>
+        </div>
+        <div class="profile judges-item-3">
+            <img src="images/Ambassadors/ozair_khan_headshot.jpeg" alt="Ozair Khan">
+            <div class="profile-details">
+                <h4>Ozair Khan - Canada</h4>
+                <h5>Empowered Youth Coding Club</h5>
+                <p>I am a semi retired computer professional who wants to help empower high school graduates to become professionally employed by learning software development through virtual Empowered Youth Coding Club. I have worked as a software engineer, worked in Bell Labs, taught computer science in university and developed software tools as a Geographic Information Systems in oil and gas companies. I study UI/UX design and want to work as a freelance UI/UX Developer.</p>
+            </div>
+        </div>
+        <!--<div class="profile judges-item-4">
+            <img src="images/Ambassadors/rejoyce_amanie_headshot.jpg" alt="Rejoyce Amanie">
+            <div class="profile-details">
+                <h4>Rejoyce Amanie - Ghana</h4>
+                <h5>ElaD club</h5>
+                <p>Hi, I am Rejoyce Amanie an education enthusiast. "It's important for children to start practicing the difficult yet important things in life early thus mastering them for rare opportunities". This is my reason and my goal.</p>
             </div>
         </div>-->
     </div>
