--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,7 @@
                        <h3>Founder | Board Chair</h3>
                        <h4>Victoria Glossip</h4>
                        <h5>Farragut Systems, Inc.</h5>
-                       <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. She has been teaching coding for 2 years and her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                       <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. She has been teaching coding for nearly 2 years and her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
                    </div>
                </div>
                <div class="profile bod-item-2">
