--- a/main.html
+++ b/main.html
@@ -39,6 +39,8 @@
             <a href="ambassador-hub.html" class="button">Ambassador Hub</a>
             <a href="aboutus.html" class="button">About Us</a>
             <a href="faq.html" class="button">FAQ</a>
+            <p>Coming Soon: Bit by Bit Coding in Chinese</p>
+            <p>即將推出：《Bit by Bit Coding》中文版</p>
         </div>
 
         <!-- NEW STATS SECTION -->
