--- a/ambassador-hub.html
+++ b/ambassador-hub.html
@@ -267,7 +267,7 @@
             </div>
         </div>
         <div class="profile judges-item-2">
-            <img src="images/logo-color.png" alt="Rajesh Kumar Kanji">
+            <img src="images/Ambassadors/rajesh_kanii_headshot.jpeg" alt="Rajesh Kumar Kanji">
            <div class="profile-details">
                <h4>Rajesh Kumar Kanji - United States</h4>
                <h5>Harrisburg University</h5>
