--- a/mobile.html
+++ b/mobile.html
@@ -81,7 +81,7 @@
             <script type="text/javascript">
                 gnp_url = 'bit-by-bit-coding-1';gnp_num = '4';
             </script>
-            <script type="text/javascript">
+            <!--<script type="text/javascript">
                 (function() {
                     document.write('<iframe class="resp_iframe" src="https://greatnonprofits.org/badge/mini_' + gnp_num + '_new/' + gnp_url + '" width="124" height="72" frameborder="0" scrolling="no"></iframe>');
                 })()
@@ -92,7 +92,7 @@
                         title="Review Bit by Bit Coding on Great Nonprofits" 
                         src="//cdn.greatnonprofits.org/images/great-nonprofits.gif?id=997664190"> 
                 </a>
-            </noscript>
+            </noscript>-->
         </div>
     </div>
 
