Judge minor updates

--- a/aboutus.html
+++ b/aboutus.html
@@ -143,7 +143,7 @@
                     <div class="profile-details">
                         <h4>Paul Deavers</h4>
                         <h5>AHM Enterprises</h5>
-                        <p>Paul Deavers has a passion for building efficient, scalable, and user-focused solutions. Combining strong problem-solving skills with hands-on experience in both technology and property management, Paul excels at applying logic, creativity, and structure to every project he takes on.</p>
+                        <p>Paul Deavers has a passion for building efficient, scalable, and user-focused solutions. Combining strong problem-solving skills with hands-on experience in both technology and property management, Paul excels at applying logic, creativity, and structure to every project he takes on.</p>x
 
                         <p>Paul’s technical skill set includes a broad range of programming languages such as Python, JavaScript, Java, HTML, CSS, and TypeScript. He is experienced with frameworks and tools like React, React Native, Node.js, Express, PostgreSQL, and Git version control, as well as API testing with Postman. His ability to design, build, and maintain both front-end and back-end systems reflects his dedication to mastering the full web development stack.</p>
                     </div>
@@ -275,6 +275,7 @@
                     <div class="profile-details">
                         <h4>Aishwariya Rao Nagar</h4>
                         <h5>Oracle</h5>
+                        <h6>Lead Judge</h6>
                         <p>Aishwariya is a Senior Software Engineer at Oracle, where she works on advancing cloud integration solutions within Oracle Integration Cloud. She develops and enhances scalable platforms that enable seamless connectivity across diverse enterprise applications and systems. Her work focuses on delivering robust integration services, streamlining business processes, and leveraging AI-driven solutions to tackle complex technical challenges. Beyond her core responsibilities, Aishwariya is passionate about mentoring emerging engineers, inspiring more people to pursue careers in technology, and fostering a community of future tech leaders through knowledge-sharing and guidance.</p>
                     </div>
                 </div>
@@ -312,6 +313,7 @@
                     <div class="profile-details">
                         <h4>Malar Kondappan</h4>
                         <h5>General Motors Financial</h5>
+                        <h6>Reporting Judge</h6>
                         <p>I'm Malar Kondappan, a System Architect and Technical Project Manager with over 20 years of experience in building secure, scalable technology solutions. My work has spanned the insurance, finance, and automotive industries, where I've led digital transformation initiatives and delivered enterprise-level systems that balance innovation with stability.</p>
 
                         <p>With a Master's in Information Systems and Security, I bring a strong foundation in both technology and strategy. Over the years, I’ve guided global, cross-functional teams, architected solutions across multi-cloud environments, and championed Agile and DevOps methodologies to improve performance, security, and delivery speed.</p>
