--- a/courses.html
+++ b/courses.html
@@ -93,7 +93,7 @@
 
 <!-- Fall 2025 A -->
 <div class="container">
-    <h1>Fall 2025 Session A Courses (Current)</h1>
+    <h1>Fall 2025 Session A Courses (Past)</h1>
     <p>All prep courses run for 4 weeks, meeting via Discord on September 20th, September 27th, October 4th, and October 11th. These courses include an end-of-session hackathon on October 18th from 12pm-3pm Eastern Time.</p>
     <h2>Web Development Hackathon Prep</h2>
     <ul>
@@ -119,7 +119,8 @@
             <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
         </li>
     </ul>
-    <button class="button" onclick="registera()">Register</button>
+    <!--<button class="button" onclick="registera()">Register</button>-->
+    <p>Registration Closed</p>
 </div>
 <script>
 function registera() {
@@ -129,7 +130,7 @@ function registera() {
 
 <!-- Fall 2025 B -->
 <div class="container">
-    <h1>Fall 2025 Session B Courses (Upcoming)</h1>
+    <h1>Fall 2025 Session B Courses (Current)</h1>
     <p>All prep courses run for 4 weeks, meeting via Discord on October 25th, November 1st, November 8th, and November 15th. These courses include an end-of-session hackathon on November 22nd from 12pm-3pm Eastern Time.</p>
     <h2>Web Development Hackathon Prep</h2>
     <ul>
@@ -224,6 +225,69 @@ function registerb() {
     </ul>
     <!--<button class="button" onclick="register()">Register</button>-->
     <p>Registration Opens December 1st, 2025</p>
+</div>
+
+<!-- Summer 2026 -->
+<div class="container">
+    <h1>Summer 2026 Session A Courses (Upcoming)</h1>
+    <p>All prep courses run for 4 weeks, meeting via Discord on June 20th, June 27th, July 11th, and July 18th. These courses include an end-of-session hackathon on July 25th from 12pm-3pm Eastern Time.</p>
+    <h2>Web Development Hackathon Prep</h2>
+    <ul>
+        <li>Web Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <h2>App Development Hackathon Prep</h2>
+    <ul>
+        <li>App Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <!--<button class="button" onclick="register()">Register</button>-->
+    <p>Registration Opens March 14th, 2026</p>
+</div>
+
+<div class="container">
+    <h1>Summer 2026 Session B Courses (Upcoming)</h1>
+    <p>All prep courses run for 4 weeks, meeting via Discord on August 1st, August 8th, August 15th, and August 22nd. These courses include an end-of-session hackathon on August 29th from 12pm-3pm Eastern Time.</p>
+    <h2>Web Development Hackathon Prep</h2>
+    <ul>
+        <li>Web Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <h2>App Development Hackathon Prep</h2>
+    <ul>
+        <li>App Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <!--<button class="button" onclick="register()">Register</button>-->
+    <p>Registration Opens March 14th, 2026</p>
 </div>
 
     <!--<footer>
