--- a/hackathons.html
+++ b/hackathons.html
@@ -35,16 +35,17 @@
     <div class="grid-container grid-container-hackathon">
         <!-- Current Hackathons -->
         <div class="container">
-            <h1>Summer 2025 Hackathons</h1>
+            <h1>Summer 2025 Hackathons (Past)</h1>
             <ul>
-                <li>Web Dev Hackathon
+                <li>Web Dev Hackathon (Past)
                     <div class="nested-list">Date: August 2nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
                 </li>
-                <li>App Dev Hackathon
+                <li>App Dev Hackathon (Past)
                     <div class="nested-list">Date: August 2nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
                 </li>
             </ul>
-            <button class="button" onclick="registernow()">Register</button>
+            <p>Registration Closed</p>
+            <!--<button class="button" onclick="registernow()">Register</button>-->
             <script>
                 function registernow() {
                     window.location.href = "https://forms.gle/Pay7Gk416HDBZhLeA";
@@ -54,12 +55,12 @@
 
         <!-- Upcoming Hackathons -->
         <div class="container">
-            <h1>Fall 2025 Hackathons</h1>
+            <h1>Fall 2025 Hackathons (Current)</h1>
             <ul>
-                <li>Fall 2025 Session A Hackathon
+                <li>Fall 2025 Session A Hackathon (Past)
                     <div class="nested-list">Date: October 18th, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
                 </li>
-                <li>Fall 2025 Session B Hackathon
+                <li>Fall 2025 Session B Hackathon (Upcoming)
                     <div class="nested-list">Date: November 22nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
                 </li>
             </ul>
