--- a/ambassador-hub.html
+++ b/ambassador-hub.html
@@ -320,6 +320,8 @@
     <p>Homeschool</p>
     <p><strong>Khadija Zaigham - Pakistan</strong></p>
     <p>GCU-4th Semester, Section A1</p>
+    <p><strong>Jonathan Robinson - Taiwan</strong></p>
+    <p>Bit by Bit Coding Chapter</p>
 
 </body>
 </html>
