--- a/main.html
+++ b/main.html
@@ -39,6 +39,8 @@
             <a href="ambassador-hub.html" class="button">Ambassador Hub</a>
             <a href="aboutus.html" class="button">About Us</a>
             <a href="faq.html" class="button">FAQ</a>
+            <!--<a href="中文.html" class="button">中文</a>
+            <a href="en-español.html" class="button">En Español</a>-->
             <p>Coming Soon: Bit by Bit Coding in Chinese</p>
             <p>即將推出：《Bit by Bit Coding》中文版</p>
         </div>
@@ -47,15 +49,15 @@
         <div class="stats-section">
             <div class="stats-container">
                 <div class="stat-box">
-                    <div class="stat-number">46</div>
+                    <div class="stat-number">47</div>
                     <div class="stat-label">Countries</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-number">11,417</div>
+                    <div class="stat-number">11,692</div>
                     <div class="stat-label">Projects Completed</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-number">2,237</div>
+                    <div class="stat-number">2,287</div>
                     <div class="stat-label">Students</div>
                 </div>
                 <div class="stat-box">
