--- a/aboutus.html
+++ b/aboutus.html
@@ -344,9 +344,9 @@
                         </div>
                 </div>
                 <div class="profile judges-item-2">
-                    <img src="images/Ram_headshot.jpeg" alt="Rambrij Chauhan ">
+                    <img src="images/Ram_headshot.jpeg" alt="FNU Ram Brij">
                     <div class="profile-details">
-                        <h4>Rambrij Chauhan</h4>
+                        <h4>FNU Ram Brij</h4>
                         <h5>Captial One</h5>
                         <p>I am a technology leader with more than 18 years of experience, specializing in credit card systems and payment technologies. Over the past decade, my focus has been on building secure and scalable platforms that handle real-time card authorizations, improve fraud detection, and enable seamless digital authentication. I have led the design of EMVCo-certified 3D Secure (3DS) authentication systems and enterprise decisioning engines that evaluate creditworthiness in real time, ensuring compliance with global standards while protecting consumers. My background also includes work in AI and machine learning to strengthen fraud prevention and reduce false positives, combining technical innovation with practical business impact. As a Senior Member of IEEE, I actively contribute through mentoring, judging, and speaking engagements, sharing insights on secure payments, fintech innovation, and system resilience. I am passionate about advancing technologies that enhance trust in global payment ecosystems and inspire the next generation of engineers.</p>
                     </div>
