--- a/ambassador-hub.html
+++ b/ambassador-hub.html
@@ -286,14 +286,18 @@
                 <p>I am a semi retired computer professional who wants to help empower high school graduates to become professionally employed by learning software development through virtual Empowered Youth Coding Club. I have worked as a software engineer, worked in Bell Labs, taught computer science in university and developed software tools as a Geographic Information Systems in oil and gas companies. I study UI/UX design and want to work as a freelance UI/UX Developer.</p>
             </div>
         </div>
-        <!--<div class="profile judges-item-4">
-            <img src="images/Ambassadors/rejoyce_amanie_headshot.jpg" alt="Rejoyce Amanie">
+        <div class="profile judges-item-4">
+            <img src="images/srikanth_reddy_gudi_headshot.jpg" alt="Srikanth Reddy Gudi">
             <div class="profile-details">
-                <h4>Rejoyce Amanie - Ghana</h4>
-                <h5>ElaD club</h5>
-                <p>Hi, I am Rejoyce Amanie an education enthusiast. "It's important for children to start practicing the difficult yet important things in life early thus mastering them for rare opportunities". This is my reason and my goal.</p>
+                <h4>Srikanth Reddy Gudi - United States</h4>
+                <h5>Bit by Bit Coding Chapter</h5>
+                <p>I’m Srikanth, a Senior Software Engineer Advisor with around 10 years of experience specializing in back-end engineering and large-scale enterprise application development. Throughout my career, I have designed and delivered robust solutions across the healthcare, financial, and hospitality sectors, consistently driving impactful business outcomes.</p>
+
+                <p>I have a strong track record of leading critical initiatives and collaborating closely with cross-functional teams—including engineering, DevOps, and product management—to build secure, high-performance systems.</p>
+
+                <p>In my current role at Cigna-Evernorth Health Services, I architect cloud-native solutions and automate complex workflows to enhance operational efficiency. My work spans modernizing legacy platforms using OpenShift and AWS, developing secure real-time microservices, and leveraging OCR and DevOps automation to streamline processes and improve scalability.</p>
             </div>
-        </div>-->
+        </div>
     </div>
     
     <!--Misc. Ambassadors-->
