--- a/aboutus.html
+++ b/aboutus.html
@@ -186,7 +186,7 @@
                 </div>
             </div>
             <div class="coaches">
-                <!--ROW 4-->
+                <!--ROW 4
                 <div class="profile coaches-item-1">
                     <img src="images/inchara_padmanabh_headshot.png" alt="Inchara Padmanabh">
                     <div class="profile-details">
@@ -216,23 +216,13 @@
                     </div>
                 </div>
                 <div class="profile coaches-item-4">
-                    <!--<img src="images/boubacar_ba_headshot.jpg" alt="Boubacar Ba">
+                    <img src="images/boubacar_ba_headshot.jpg" alt="Boubacar Ba">
                     <div class="profile-details">
                         <h4>Boubacar Ba</h4>
                         <h5>Laurentian University</h5>
                         <p>I am a Computer Science student at Laurentian University with a passion in software development, machine learning, and data-driven projects. I enjoy learning new skills and sharing my knowledge to others. I am Bilingual in French and English and I'm eager to make a difference and assist others in developing their abilities.</p>
-                    </div>-->
-                    <img src="images/julia_johnson_headshot.png" alt="Julia Johnson">
-                    <div class="profile-details">
-                        <h4>Julia Johnson</h4>
-                        <h5>College Student</h5>
-                        <p>My name is Ms. Jules and I’m excited to begin as a substitute teacher for Bit by Bit Coding. My previous coding experience ranges from C, C++, Verilog, and MATLAB. This means I enjoy both the hardware and software aspects of computers. It also means, I am excited to learn yet another language with you all!</p>
-
-                        <p>Education wise I’m at the junior level of university for Electrical and Computer Engineering. Life wise I enjoy making art, music, and tinkering around on ProjectEuler.net. I am also looking forward to adopting a dog in December!</p>
-
-                        <p>The idea of combining art, creation, and code has been an interest of mine for quite a while. I can find no better way to experience HTML, CSS, and JavaScript than learning and teaching with everyone here.</p>
                     </div>
-                </div>
+                </div>-->
             </div>
             <h2>Judges</h2>
             <!--row1-->
